build navbar and fix css issue on dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
+    background: rgb(27, 25, 25);
   }
 }
 
